<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_item_reminders"
        android:icon="@drawable/ic_speaker_navigation"
        android:orderInCategory="1"
        android:title="@string/menu_item_reminders" />

    <item
        android:id="@+id/menu_item_favorites"
        android:icon="@drawable/ic_star_navigation"
        android:orderInCategory="1"
        android:title="@string/menu_item_favorites" />

    <item
        android:id="@+id/menu_item_archive"
        android:icon="@drawable/ic_archive_navigation"
        android:orderInCategory="1"
        android:title="@string/menu_item_archive" />
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings_navigation"
        android:orderInCategory="1"
        android:title="@string/menu_item_settings" />

    <item
        android:id="@+id/menu_item_info"
        android:icon="@drawable/ic_info_navigation"
        android:orderInCategory="1"
        android:title="@string/menu_item_info" />



</menu>